<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Contact Name: </string>
    <string name="PhoneNumber">Contact Phone Number: </string>
    <string name="Email">Contact Email: </string>
    <string name="ContactName">Alina Mehdi</string>
    <string name="ContactPhoneNumber">7863029359</string>
    <string name="ContactEmail">alinamehdi@gmail.com</string>
    <string name="AddButton">ADD</string>
    <string name="ContactList">Contact List</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

</resources>
